tests/ui/imports/ambiguous-9.stderr
error[E0659]: `date_range` is ambiguous
  --> $DIR/ambiguous-9.rs:23:5
   |
LL |     date_range();
   |     ^^^^^^^^^^ ambiguous name
   |
   = note: ambiguous because of multiple glob imports of a name in the same module
note: `date_range` could refer to the function imported here
  --> $DIR/ambiguous-9.rs:16:13
   |
LL |     pub use super::dsl::*;
   |             ^^^^^^^^^^^^^
   = help: consider adding an explicit import of `date_range` to disambiguate
note: `date_range` could also refer to the function imported here
  --> $DIR/ambiguous-9.rs:15:13
   |
LL |     pub use self::t::*;
   |             ^^^^^^^^^^
   = help: consider adding an explicit import of `date_range` to disambiguate

warning: ambiguous glob re-exports
  --> $DIR/ambiguous-9.rs:16:13
   |
LL |     pub use self::t::*;
   |             ---------- but the name `date_range` in the value namespace is also re-exported here
LL |     pub use super::dsl::*;
   |             ^^^^^^^^^^^^^ the name `date_range` in the value namespace is first re-exported here
   |
   = note: `#[warn(ambiguous_glob_reexports)]` on by default

error: aborting due to 1 previous error; 1 warning emitted

For more information about this error, try `rustc --explain E0659`.
